# stillrunning-pip

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
stillrunning_pip/: __init__.py  cli.py  config.py
stillrunning_pip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
