[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stillrunning-pip"
version = "1.0.0"
description = "Secure pip wrapper with supply chain attack protection"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "stillrunning.io", email = "hello@stillrunning.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Installation/Setup",
]
keywords = ["security", "supply-chain", "pip", "malware", "protection"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://stillrunning.io"
Documentation = "https://stillrunning.io/docs"
Repository = "https://github.com/johhnyg/stillrunning-pip"
Issues = "https://github.com/johhnyg/stillrunning-pip/issues"

[project.scripts]
stillrunning-pip = "stillrunning_pip.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stillrunning_pip*"]
